# eqlang

./: Cargo.toml  README.md
src/: eqlang.pest  main.rs  parser.rs
src/lexer/: mod.rs
tests/: statements.rs
