[package]
name = "eqlang"
version = "0.1.0"
edition = "2021"
description = "A simple programming language used only extension mark and question mark"
repository = "https://github.com/haruki7049/eqlang"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
pest = "2.8.0"
pest_derive = "2.8.0"

[dev-dependencies]
assert_cmd = "2.0.17"
